--- a/commerce-js/package.json
+++ b/commerce-js/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^12.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.12.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
